--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-568-digimedia
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="#" class="logo">
-              <img src="assets/images/logo-v3.png" alt="">
+              <img src="assets/images/bmedia.png" alt="">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -674,8 +674,8 @@ https://templatemo.com/tm-568-digimedia
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2022 N-Media ., Ltd. All Rights Reserved. 
-          <br>Design: <a href="#" target="_parent" title="free css templates">Basil</a></p>
+          <p>Copyright © 2022 <a href="https://najeebmedia.com/" target="_parent">N-Media</a> ., Ltd. All Rights Reserved. 
+          <br>Design: <a href="#" target="_parent">Basil</a></p>
         </div>
       </div>
     </div>
